# litegen

./: .env  .gitignore  README.md  autobuild.sh  build.sh  chromedrive_install.txt  install.sh  ollama_agent.py  pyproject.toml  requirements.txt  setup.cfg  stapp_run.py  trace_stapp.py
ailite/: __init__.py  _ai_google.py  _ai_validator.py  _config.py  _models.py  ttc_semantic_search.py  ttc_validator.py
ailite/autogen/: __init__.py  _autogen.py
ailite/dspy/: __init__.py  _dspy.py  _main.py
ailite/evallite/: __init__.py  _main.py
ailite/langchain/: __init__.py  _langchain.py
ailite/llamaindex/: __init__.py  _llamaindex.py
ailite/model/: __init__.py  _oai.py  _ollama_models.py  _serving_models.py  main.py
litegen/: __init__.py  _agent_utils.py  _oai.py  _types.py  agents.py  client_completions.py  completions.py  trace_llm.py  ttc.py  ttc_implementation.py  ttc_validator.py  utils.py
litegen/_test_time_compute_scripts/: ttc_implementation.py
litegen/feats/: llmsearch.py
litegen/model/: __init__.py  _convert_tool_util.py  _oai.py  _serving_models.py  _types.py  completions.py  main.py
litegen/utils/: __init__.py  ocr_surya.py
src/ailite/: __init__.py
src/ailite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ailite/features/: __init__.py  ailite_ollama.py  inference_gradio.py
src/ailite/hf_official_api/: __init__.py  main.py
src/ailite/main/: _ailite.py  _ailite_api.py  _ailite_streamlit.py
test/: dsollama_.py  dsollama_tool.py  genai_stream.py  huggingchat_.py  main.py  multi_gen_test.py  ollama_.py  ollama_agent.py  ollama_tool_.py  parallel_ollama.py  surya_ocr_test.py  test_ollama_agent.py
tests/: hugchat_remote_llms.py  main.py  run.py  t1.py
(+19 files in other folders)
