[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "litegen"
version = "0.0.16"
description = "All popular Framework HF integration kit"
authors = [ "Kammari Santhosh",]
readme = "README.md"
license = "MIT License"
repository = "https://github.com/santhosh/"
keywords = [ "",]
[[tool.poetry.packages]]
include = "litegen"

[tool.poetry.dependencies]
python = "^3.10"
langchain_core = "^0.3.28"
wordllama = "^0.3.7"
visionlite = "^0.1.58"
pypdf2 = "^3.0.1"
surya_ocr = "^0.8.2"
openai = "^1.58.1"
