[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "litegen"
version = "0.0.30"
description = "All popular Framework HF integration kit"
authors = [ "Kammari Santhosh",]
readme = "README.md"
license = "MIT License"
repository = "https://github.com/santhosh/"
keywords = [ "",]
[[tool.poetry.packages]]
include = "litegen"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.58.1"
ollama = "^0.4.5"
